fixed scrollbar color issue

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -31,5 +31,6 @@ body {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.616);
           box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.616);
+  background: #e9e9e95e;
 }
 /*# sourceMappingURL=index.module.css.map */
